--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@mipmap/widget"
         android:label="@string/app_name"
         android:supportsRtl="true"
 
@@ -21,7 +21,7 @@
 
         <activity
             android:name=".InboxCheckerAppWidgetConfigure"
-            android:icon="@drawable/icon"
+            android:icon="@mipmap/widget"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Dialog">
             <intent-filter>
